# mochi-auth-examples

./: CMakeLists.txt  README.md  spack.yaml
src/: common.h  margo_auth_complete_client.c  margo_auth_complete_server.c  margo_auth_complete_types.h  margo_auth_mac_client.c  margo_auth_mac_server.c  margo_auth_mac_session_client.c  margo_auth_mac_session_server.c  margo_auth_mac_session_types.h  margo_auth_mac_types.h  margo_simple_auth_client.c  margo_simple_auth_server.c  margo_simple_auth_types.h
